fix box stretching

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -18,8 +18,8 @@ $background: #fff;
   height: 280px;
   justify-content: center;
   margin: 0 7.5px 15px;
-  max-width: 25%;
-  min-width: 20%;
+  max-width: 23%;
+  min-width: 23%;
   overflow: hidden;
   position: relative;
 
